--- a/style.css
+++ b/style.css
@@ -3,23 +3,76 @@
     padding: 0;
     box-sizing: border-box;
 }
-#clear
-
+body
 {
-    position: absolute;
-   right: 0;
-    bottom: 0;
-    margin: 20px 50px;
-    padding: 8px 22px;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 300;
-    border: 2px solid rgb(236, 226, 226);
-   transition: 0.2s;
+    background-color: rgb(26, 20, 20);
 }
-#clear:hover
+.tools
 {
-    background-color: rgb(143, 143, 160);
-    letter-spacing: 1px;
+margin-top: 20px;
+align-items: center;
+justify-content: center;
+display: flex;
+}
+.tools .color_palete
+{
+    height: 70px;
+    width: 70px;
+    cursor: pointer;
+    display: inline-block;
+    align-items: center;
+    border-radius: 50px;
+    margin: 0px 10px;
+}
+.tools button
+{
+    background-color: rgb(26, 20, 20);
+    color: antiquewhite;
+    padding: 15px 35px;
+    border: 1px solid white;
+    border-radius: 15px;
+    margin: 0px 15px;
+    font-size: 16px;
+    text-transform: capitalize;
     transition: 0.5s;
+}
+.tools button:hover
+{
+    background-color: rgb(73, 73, 78);
+    letter-spacing: 1px;
+    transition: 0.5s; 
+}
+.tools .color_box
+{
+    height: 70px;
+    width: 70px;
+    max-height: 70px;
+    max-width: 70px;
+    border: 2px dotted black;
+    margin: 0px 27px;
+}
+.tools .pen_range
+{
+  margin: 0px 20px;
+align-items: center;
+}
+input[ type="range" ]
+{
+    -webkit-appearance: none;
+width:10%;
+outline: none;
+height: 4px;
+margin: 0 15px;
+color: black;
+background-color: blueviolet;
+}
+
+input[ type= "range" ]::-webkit-slider-thumb
+{
+-webkit-appearance: none;
+border-radius: 100%;
+height: 20px;
+width: 20px;
+background: rgb(170, 160, 180);
+cursor: pointer;
 }
