--- a/style.css
+++ b/style.css
@@ -7,15 +7,10 @@ body
 {
     background-color: rgb(26, 20, 20);
 }
-.tools
-{
-margin-top: 20px;
-align-items: center;
-justify-content: center;
-display: flex;
-}
+
 .tools .color_palete
 {
+    
     height: 70px;
     width: 70px;
     cursor: pointer;
@@ -24,6 +19,7 @@ display: flex;
     border-radius: 50px;
     margin: 0px 10px;
 }
+
 .tools button
 {
     background-color: rgb(26, 20, 20);
@@ -31,7 +27,7 @@ display: flex;
     padding: 15px 35px;
     border: 1px solid white;
     border-radius: 15px;
-    margin: 0px 15px;
+    margin: 20px 5px;
     font-size: 16px;
     text-transform: capitalize;
     transition: 0.5s;
@@ -46,33 +42,68 @@ display: flex;
 {
     height: 70px;
     width: 70px;
-    max-height: 70px;
-    max-width: 70px;
     border: 2px dotted black;
-    margin: 0px 27px;
+    margin: 30px 27px;
 }
 .tools .pen_range
 {
-  margin: 0px 20px;
-align-items: center;
+    margin: 0px 20px;
+    align-items: center;
 }
+
 input[ type="range" ]
 {
     -webkit-appearance: none;
-width:10%;
-outline: none;
-height: 4px;
-margin: 0 15px;
-color: black;
-background-color: blueviolet;
+    width:10%;
+    outline: none;
+    height: 4px;
+    margin: 0 15px;
+    color: black;
+    background-color: blueviolet;
 }
 
 input[ type= "range" ]::-webkit-slider-thumb
 {
--webkit-appearance: none;
-border-radius: 100%;
-height: 20px;
-width: 20px;
-background: rgb(170, 160, 180);
-cursor: pointer;
+    -webkit-appearance: none;
+    border-radius: 100%;
+    height: 20px;
+    width: 20px;
+    background: rgb(170, 160, 180);
+    cursor: pointer;
+}
+
+@media (max-width: 991px)
+{
+    .tools button
+    {
+        background-color: rgb(73, 73, 78);
+        padding: 15px 22px;
+        border: none;
+       margin: 20px 50px;
+    }
+ 
+    .tools .color_palete
+    {
+        margin: 10px 12px;
+        width: 40px;
+        height: 40px;
+    }
+
+    input[ type="range" ]
+    {
+        -webkit-appearance: none;
+        width:40%;
+        outline: none;
+        height: 4px;
+        color: black;
+        background-color: blueviolet;
+        margin-bottom: 40px;
+    }
+    .tools .color_box
+    {
+        height: 60px;
+        width: 60px;
+        border: px dotted black;
+        margin: 12px 32px 
+    }
 }
