--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body
     display: inline-block;
     align-items: center;
     border-radius: 50px;
-    margin: 0px 10px;
+    margin: 0px 20px;
 }
 
 .tools button
@@ -38,6 +38,7 @@ body
     text-transform: capitalize;
     transition: 0.5s;
 }
+
 .tools button:hover
 {
     background-color: rgb(73, 73, 78);
@@ -77,6 +78,143 @@ input[ type= "range" ]::-webkit-slider-thumb
     background: rgb(170, 160, 180);
     cursor: pointer;
 }
+#bulb
+{
+    color: rgb(248, 248, 234);
+    /* margin: 0px 300px; */
+}
+.colors
+{
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn
+{
+    position: absolute;
+  right: 4%;
+  bottom: 1%;
+  margin: 0px 20px;
+}
+
+
+#erase
+{
+    color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 991px)
 {
